# Models/Mall/MallModel.go
@@ -1,1 +1,6 @@
 package Mall
+
+type GetOneMallModelHandler struct {
+	// Id 商户主键ID
+	MId string `json:"mid"`
+}
