# Models/Product/ProductModel.go
@@ -1,0 +1,7 @@
+package Product
+
+type GetMallProductModelHandler struct {
+	// Id 商户主键ID
+	Mid          string `json:"mid"`
+	ProductClass string `json:"productclass"`
+}
