# Routes/Routes.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"mygofarm/Middlewares"
 	"mygofarm/Pkg/Logger"
+	"mygofarm/Services/Product"
 	"mygofarm/Services/User"
 	"mygofarm/Services/Mall"
 	"mygofarm/Settings"
@@ -28,6 +29,8 @@ func Setup() *gin.Engine {
 	r.POST("/api/login", User.LoginHandler)
 	r.POST("/api/signdel", Middlewares.JWTAuthMiddleware(), User.SignDelHandler)
 	r.POST("/api/signone", Middlewares.JWTAuthMiddleware(), User.GetoneUserHandler)
-	r.GET("/api/nearmall", Middlewares.JWTAuthMiddleware(), Mall.GetNearMallHandler)
+	r.GET("/api/nearmall", Mall.GetNearMallHandler)
+	r.POST("/api/getonemall", Mall.GetoneMallHandler)
+	r.POST("/api/getmallprod", Product.GetMallProdHandler)
 	return r
 }
